Retheme lab 2 demos with realistic domains
Each Ex.java now uses a domain that motivates the operation rather than
generic strings/numbers:

functional/
- a_functional_interface: Discount (price -> price) replaces Greeter
- b_lambda: products sorted by name length
- c_method_reference: order id parsing + slogan generation
- d_predicate: exam scores (passing/honors), removeIf failing
- e_function: review text -> word count -> engagement score pipeline
- f_consumer: newsletter dispatch (log andThen send)
- g_supplier: order id generator + dice roll

streams/
- a_stream_basics: product catalog
- b_filter: bank transactions (credits, large credits)
- c_map: products -> SKUs / lengths; order quantities -> total units
- d_for_each: subscriber email notifications
- e_sorted: city names
- f_min_max: temperature readings + product names
- g_collect: product tags (toList/toSet/joining/counting)
- h_grouping_by: Product record (name, category, price), grouped by
  category with averagingDouble and partitioningBy on price tier
- i_int_stream: monthly sales (sum/avg/best/worst)
- j_flat_map: Order record with line items, plus review keyword split

Records introduced only where they make groupingBy / flatMap concrete.