@@ -1,26 +1,26 @@
 package org.example.functional.b_lambda;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 
 public class Ex {
     public static void main(String[] args) {
 
-        Runnable noArgs = () -> System.out.println("no args lambda");
-        noArgs.run();
+        Runnable openStore = () -> System.out.println("store open: ready to serve customers");
+        openStore.run();
 
-        Comparator<Integer> byValue = (a, b) -> a - b;
-        System.out.println("compare(3,5) = " + byValue.compare(3, 5));
+        Comparator<Double> byPrice = (a, b) -> Double.compare(a, b);
+        System.out.println("compare(9.99, 14.50) = " + byPrice.compare(9.99, 14.50));
 
-        Comparator<String> byLength = (a, b) -> {
+        Comparator<String> byNameLength = (a, b) -> {
             int la = a.length();
             int lb = b.length();
             return Integer.compare(la, lb);
         };
 
-        List<String> words = Arrays.asList("banana", "fig", "apple", "kiwi");
-        words.sort(byLength);
-        System.out.println("sorted by length = " + words);
+        List<String> products = new ArrayList<>(List.of("Headphones", "Mug", "Keyboard", "Pen"));
+        products.sort(byNameLength);
+        System.out.println("products by name length = " + products);
     }
 }
