@@ -1,6 +1,5 @@
 package org.example.functional.c_method_reference;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.BiFunction;
 import java.util.function.Function;
@@ -8,35 +7,35 @@ import java.util.function.Supplier;
 
 public class Ex {
 
-    public static String shout(String value) {
-        return value.toUpperCase() + "!";
+    public static String slogan(String brand) {
+        return brand.toUpperCase() + " — buy now!";
     }
 
     public static void main(String[] args) {
 
         Function<String, Integer> parseLambda = s -> Integer.parseInt(s);
         Function<String, Integer> parseRef = Integer::parseInt;
-        System.out.println("static ref Integer::parseInt('42') = " + parseRef.apply("42"));
-        System.out.println("equivalent lambda result          = " + parseLambda.apply("42"));
+        System.out.println("static ref Integer::parseInt('1042') = " + parseRef.apply("1042"));
+        System.out.println("equivalent lambda result            = " + parseLambda.apply("1042"));
 
-        Function<String, String> shouter = Ex::shout;
-        System.out.println("static ref Ex::shout('hello') = " + shouter.apply("hello"));
+        Function<String, String> ad = Ex::slogan;
+        System.out.println("static ref Ex::slogan('acme') = " + ad.apply("acme"));
 
-        String prefix = ">>> ";
-        Function<String, String> prepend = prefix::concat;
-        System.out.println("bound ref prefix::concat('hi') = " + prepend.apply("hi"));
+        String orderPrefix = "ORD-";
+        Function<String, String> orderId = orderPrefix::concat;
+        System.out.println("bound ref prefix::concat('1042') = " + orderId.apply("1042"));
 
         Function<String, Integer> length = String::length;
         BiFunction<String, String, Boolean> startsWith = String::startsWith;
-        System.out.println("unbound ref String::length('abc')        = " + length.apply("abc"));
-        System.out.println("unbound ref String::startsWith('a','ab') = " + startsWith.apply("ab", "a"));
+        System.out.println("unbound ref String::length('Headphones')   = " + length.apply("Headphones"));
+        System.out.println("unbound ref String::startsWith('iPhone',i) = " + startsWith.apply("iPhone", "i"));
 
-        Supplier<StringBuilder> builderFactory = StringBuilder::new;
-        StringBuilder sb = builderFactory.get();
-        sb.append("built via constructor ref");
-        System.out.println(sb);
+        Supplier<StringBuilder> receiptFactory = StringBuilder::new;
+        StringBuilder receipt = receiptFactory.get();
+        receipt.append("=== receipt #1042 ===");
+        System.out.println(receipt);
 
-        List<String> words = Arrays.asList("one", "two", "three");
-        words.forEach(System.out::println);
+        List<String> orders = List.of("ORD-1001", "ORD-1002", "ORD-1003");
+        orders.forEach(System.out::println);
     }
 }
